--- a/fargasa/signin.css
+++ b/fargasa/signin.css
@@ -42,3 +42,18 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+.error{
+  color: red;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
