--- a/fargasa/sites/staff/css/style.css
+++ b/fargasa/sites/staff/css/style.css
@@ -10,3 +10,14 @@
         /* height: 100px; */
     }
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
