--- a/fargasa/sites/staff/pembelian/css/style.css
+++ b/fargasa/sites/staff/pembelian/css/style.css
@@ -120,3 +120,14 @@
         white-space: nowrap;
     }
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
