--- a/fargasa/sites/pelanggan/css/style.css
+++ b/fargasa/sites/pelanggan/css/style.css
@@ -1,3 +1,19 @@
+#topJumpBtn{
+	position: fixed;
+    width:50px;
+    height: 50px;
+	right: 50px; 
+	bottom: 50px;
+       
+}
+
+#topJumpBtn.btn{
+    background-color: rgba(0, 0, 0,0.4);
+}
+#topJumpBtn.btn:hover{
+    background-color: rgba(0, 0, 0,0.8);
+}
+
 .toast {
     left: 50%;
     position: fixed;
