--- a/fargasa/sites/pelanggan/css/style.css
+++ b/fargasa/sites/pelanggan/css/style.css
@@ -1,17 +1,17 @@
 #topJumpBtn{
 	position: fixed;
-    width:50px;
-    height: 50px;
+        width:50px;
+        height: 50px;
 	right: 50px; 
 	bottom: 50px;
-       
+       color: white;
 }
 
 #topJumpBtn.btn{
-    background-color: rgba(0, 0, 0,0.4);
+    background-color: rgba(0, 123, 255,0.8);
 }
 #topJumpBtn.btn:hover{
-    background-color: rgba(0, 0, 0,0.8);
+    background-color: rgba(0, 123, 255,1);
 }
 
 .toast {
